# PluginLoader

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  PHASE2_SUMMARY.md  PHASE3_PROGRESS.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  check_environment.sh
src/: main.rs
src/audio/: device.rs  engine.rs  level_meter.rs  mod.rs  processor.rs
src/plugin/: au_wrapper.rs  chain.rs  loader.rs  mod.rs  project.rs  scanner.rs  types.rs
src/ui/: app.rs  mod.rs  widgets.rs
