[package]
name = "plugin-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
# 音频 I/O (Phase 1)
cpal = "0.15"
ringbuf = "0.3"
ctrlc = "3.4"

# GUI (Phase 3 - 暂时注释)
# egui = "0.28"
# eframe = "0.28"

# Audio Unit 插件支持 (Phase 2)
# 使用 macOS 系统原生框架，通过 FFI 调用
# coreaudio-sys = "0.2"  # CoreAudio 系统绑定

# 工具库
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

